# whucs-training-project

./: .gitignore  DESIGN.md  OPEN_DESIGN.md  README.md  docker-compose.yml  findings.md  progress.md  setup.sh  task_plan.md
backend/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  main.py  nginx.conf  pyproject.toml  supervisord.conf  whucs.db
backend/alembic/: env.py
backend/alembic/versions/: 0468414f2f58_init_all_tables.py  20260711_agent_memory.py  20260711_rag_agent_refactor.py  20260716_workflow_debug_sessions.py  20260716_workflow_history.py  423efa013cf2_add_owner_id_to_files_folders.py
backend/app/: __init__.py  main.py  openapi_export.py
backend/app/api/: routes.py
backend/app/core/: config.py  database.py
backend/app/data/: courses.json
backend/app/domain/: __init__.py  auth.py  common.py  file.py  folder.py  knowledge.py  schemas.py  team.py  workflow.py
backend/app/models/: __init__.py  file.py  folder.py  general.py  knowledge.py  team.py  user.py  workflow.py
backend/app/repositories/: __init__.py  file.py  folder.py  general.py  knowledge.py  team.py  user.py  workflow.py
backend/app/routers/: permissions.py
backend/app/security/: __init__.py  middleware.py  schemas.py  service.py
backend/app/services/: agent_executor.py  agent_planner.py  embedding.py  (+8 more)
backend/tests/: conftest.py  test_agent_evaluation.py  test_agent_executor.py  test_agent_memory.py  test_agent_planner.py  test_embedding.py  test_llm.py  test_openapi_export.py  test_parser.py  test_rag_pipeline.py  test_tool_registry.py  test_workspace_api.py
(+180 files in other folders)
