[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "aiofiles>=25.1.0",
  "aiosqlite>=0.22.1",
  "alembic>=1.18.5",
  "arq>=0.28.0",
  "asyncmy>=0.2.11",
  "beautifulsoup4>=4.15.0",
  "celery>=5.6.3",
  "faiss-cpu>=1.14.3",
  "fastapi>=0.139.0",
  "httpx>=0.28.1",
  "langchain>=1.3.11",
  "langchain-community>=0.4.2",
  "langchain-openai>=1.3.3",
  "langgraph>=1.2.8",
  "markdown>=3.10.2",
  "minio>=7.2.20",
  "numpy>=2.5.1",
  "orjson>=3.11.9",
  "paddleocr>=2.10.0",
  "pandas>=3.0.3",
  "passlib[bcrypt]>=1.7.4",
  "pillow>=12.3.0",
  "pydantic-settings>=2.14.2",
  "pymilvus>=3.0.0",
  "pymupdf>=1.28.0",
  "pytesseract>=0.3.13",
  "python-docx>=1.2.0",
  "python-dotenv>=1.2.2",
  "python-jose[cryptography]>=3.5.0",
  "python-multipart>=0.0.32",
  "python-pptx>=1.0.2",
  "rank-bm25>=0.2.2",
  "redis>=5.3.1",
  "sentence-transformers>=5.6.0",
  "sqlalchemy>=2.0.51",
  "structlog>=26.1.0",
  "tenacity>=9.1.4",
  "uvicorn[standard]>=0.50.2",
]

[tool.uv]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]
